apps/angular-frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: angular-frontend
  labels:
    name: angular-frontend
    app-type: frontend
    framework: angular
