apps/angular-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-frontend-service
  namespace: angular-frontend
  labels:
    app: angular-frontend
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: angular-frontend
