apps/angular-frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: angular-frontend-route
  namespace: angular-frontend
  labels:
    app: angular-frontend
spec:
  host: angular.apps.p-ai.net
  to:
    kind: Service
    name: angular-frontend-service
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
